[gd_scene load_steps=8 format=2]

[ext_resource path="res://Menus/Mode&DifficultyLevel.gd" type="Script" id=1]
[ext_resource path="res://Fonts/font16.tres" type="DynamicFont" id=2]
[ext_resource path="res://StyleBoxs/easyBtnTheme.tres" type="Theme" id=3]
[ext_resource path="res://StyleBoxs/hardBtnTheme.tres" type="Theme" id=4]
[ext_resource path="res://StyleBoxs/veryhardBtnTheme.tres" type="Theme" id=5]
[ext_resource path="res://StyleBoxs/normalModeBtnTheme.tres" type="Theme" id=6]
[ext_resource path="res://StyleBoxs/endlessBtnTheme.tres" type="Theme" id=7]

[node name="Mode&DifficultyLevel" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -180.0
margin_right = 320.0
margin_bottom = 180.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -180.0
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0.12549, 0.12549, 0.12549, 1 )

[node name="ModeContainer" type="VBoxContainer" parent="ColorRect"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 64.0
margin_top = -116.0
margin_right = 256.0
margin_bottom = 84.0
custom_constants/separation = 15

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/ModeContainer"]
margin_right = 192.0
margin_bottom = 23.0
custom_constants/separation = 70

[node name="NormalModeBtn" type="Button" parent="ColorRect/ModeContainer/HBoxContainer"]
margin_right = 54.0
margin_bottom = 23.0
theme = ExtResource( 6 )
toggle_mode = true
text = "Normal"

[node name="EndlessModeBtn" type="Button" parent="ColorRect/ModeContainer/HBoxContainer"]
margin_left = 124.0
margin_right = 183.0
margin_bottom = 23.0
theme = ExtResource( 7 )
toggle_mode = true
text = "Endless"

[node name="Label" type="Label" parent="ColorRect/ModeContainer"]
margin_top = 38.0
margin_right = 192.0
margin_bottom = 57.0
custom_fonts/font = ExtResource( 2 )
autowrap = true

[node name="DifficultyContainer" type="VBoxContainer" parent="ColorRect"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -296.0
margin_top = -116.0
margin_right = -44.0
margin_bottom = 84.0
custom_constants/separation = 15

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/DifficultyContainer"]
margin_right = 252.0
margin_bottom = 23.0
custom_constants/separation = 50

[node name="EasyLevelBtn" type="Button" parent="ColorRect/DifficultyContainer/HBoxContainer"]
margin_right = 38.0
margin_bottom = 23.0
theme = ExtResource( 3 )
toggle_mode = true
keep_pressed_outside = true
text = "Easy"

[node name="HardLevelBtn" type="Button" parent="ColorRect/DifficultyContainer/HBoxContainer"]
margin_left = 88.0
margin_right = 127.0
margin_bottom = 23.0
theme = ExtResource( 4 )
toggle_mode = true
keep_pressed_outside = true
text = "Hard"

[node name="VeryHardLevelBtn" type="Button" parent="ColorRect/DifficultyContainer/HBoxContainer"]
margin_left = 177.0
margin_right = 251.0
margin_bottom = 23.0
theme = ExtResource( 5 )
toggle_mode = true
keep_pressed_outside = true
text = "VeryHard"

[node name="Label" type="Label" parent="ColorRect/DifficultyContainer"]
margin_top = 38.0
margin_right = 252.0
margin_bottom = 57.0
custom_fonts/font = ExtResource( 2 )
autowrap = true

[node name="Title" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -120.0
margin_top = 16.0
margin_right = 122.0
margin_bottom = 57.0
custom_fonts/font = ExtResource( 2 )
text = "เลือกโหมดการเล่นและระดับความยาก"
align = 1
autowrap = true

[node name="Alert" type="Label" parent="ColorRect"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -144.0
margin_top = 288.0
margin_right = 144.0
margin_bottom = 329.0
custom_fonts/font = ExtResource( 2 )
text = "กรุณาเลือกโหมดการเล่นและระดับความยาก"
align = 1
autowrap = true

[node name="VSeparator" type="VSeparator" parent="ColorRect"]
margin_left = 320.0
margin_top = 64.0
margin_right = 324.0
margin_bottom = 280.0

[node name="PlayBackContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -56.0
margin_top = -56.0
margin_right = 57.0
margin_bottom = -16.0
custom_constants/separation = 30

[node name="BackBtn" type="Button" parent="PlayBackContainer"]
margin_right = 42.0
margin_bottom = 40.0
text = "Back"

[node name="PlayBtn" type="Button" parent="PlayBackContainer"]
margin_left = 72.0
margin_right = 113.0
margin_bottom = 40.0
text = "Start"

[connection signal="pressed" from="ColorRect/ModeContainer/HBoxContainer/NormalModeBtn" to="." method="_on_NormalModeBtn_pressed"]
[connection signal="pressed" from="ColorRect/ModeContainer/HBoxContainer/EndlessModeBtn" to="." method="_on_EndlessModeBtn_pressed"]
[connection signal="pressed" from="ColorRect/DifficultyContainer/HBoxContainer/EasyLevelBtn" to="." method="_on_EasyLevelBtn_pressed"]
[connection signal="pressed" from="ColorRect/DifficultyContainer/HBoxContainer/HardLevelBtn" to="." method="_on_HardLevelBtn_pressed"]
[connection signal="pressed" from="ColorRect/DifficultyContainer/HBoxContainer/VeryHardLevelBtn" to="." method="_on_VeryHardLevelBtn_pressed"]
[connection signal="pressed" from="PlayBackContainer/BackBtn" to="." method="_on_BackBtn_pressed"]
[connection signal="pressed" from="PlayBackContainer/PlayBtn" to="." method="_on_PlayBtn_pressed"]
